[package]
name = "thread-count"
version = "0.1.0"
authors = ["matias.hiltunen <matias.hiltunen@TA-PLAB-AET23>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "thread_count"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"
console = "0.14.0"


